--- a/frontend/src/app/pages/sign-in/sign-in.component.html
+++ b/frontend/src/app/pages/sign-in/sign-in.component.html
@@ -1,3 +1,4 @@
+<app-progress-spinner *ngIf="loading"></app-progress-spinner>
 <div class="sign-in-page">
     <h1>Welcome Back</h1>
     <mat-card>
